[metadata]
name = ansible-schemas
url = https://github.com/ansible-community/schemas
project_urls =
  Bug Tracker = https://github.com/ansible-community/schemas/issues
  CI: GitHub = https://github.com/ansible-community/schemas/actions
  Source Code = https://github.com/ansible-community/schemas
description = Generate JSON/YAML Validation schemas for Ansible content
long_description = file: README.md
long_description_content_type = text/markdown
author = Sorin Sbarnea
author_email = ssbarnea@redhat.com
maintainer = Sorin Sbarnea
maintainer_email = ssbarnea@redhat.com
license = MIT
license_file = LICENSE
classifiers =
  Development Status :: 3 - Alpha

  Environment :: Console

  Intended Audience :: Developers
  Operating System :: OS Independent

  License :: OSI Approved :: MIT License

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

  Topic :: Software Development :: Quality Assurance
  Topic :: Software Development :: Testing

  Topic :: Utilities
keywords =
  ansible
  json
  schemas

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = src
packages = find:
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
  setuptools_scm>=1.15.0
  setuptools_scm_git_archive>=1.0

# These are required in actual runtime:
install_requires =
  ansible>=3.1.0
  ansible-lint>=5.0.5
  jsonschema>=3.2.0
  packaging>=20.9
  pydantic>=1.8.1
  pytest>=6.2.2
  pytest-plus>=0.2
  pyyaml>=5.4.1
  requests>=2.25.1
  typing-extensions; python_version < "3.8"

[options.entry_points]
console_scripts =
  ansible-schemas = ansibleschemas.__main__:main

[options.packages.find]
where = src

[codespell]
skip = .tox,.mypy_cache,build,.git,.eggs,pip-wheel-metadata,src/ansiblelint/data
